// Copyright 2017 Capsule8 Inc. All rights reserved.

syntax = "proto3";

package capsule8.api.v0;
option go_package = "github.com/capsule8/api/v0";

import "capsule8/api/v0/types.proto";

message Event {
        // Unique identifier for the event
        string id = 1;

        // Unique process identifier associated with the event to differentiate
        // reused values of the pid below.
        string process_id = 2;

        // Unix pid of the process associated with the event
        int32 process_pid = 3;

        // Container identifier associated with the event
        string container_id = 4;

        // Sensor identifier of the sensor instance that observed the event
        string sensor_id = 5;

        // Sequence number from some unspecified starting point unique
        // to the Sensor. Provides a strict linear ordering of events with
        // the same sensor_id where no two events can have the same sequence
        // number. If it is present, it must be greater than zero. A zero
        // value indicates that there is no sequence number associated with
        // the event.
        uint64 sensor_sequence_number = 6;

        // Monotonic nanosecond timestamp from some unspecified starting
        // point unique to the Sensor. Can only be used to calculate time
        // intervals between events with the same sensor_id.
        int64 sensor_monotime_nanos = 7;

        // Process Lineage contains one process context for each process in the
        // hierarchy, starting with the current process, up to the root of the
        // process namespace.
        repeated Process process_lineage = 8;

        // Name of container associated with the event
        string container_name = 30;

        // Unique identifier of the container image
        string image_id = 31;

        //
        // Name of the container image (i.e. "busybox" or
        // "gcr.io/google_containers/nginx-ingress-controller")
        //
        string image_name = 32;

        oneof event {
                //
                // Kernel-level events
                //

                SyscallEvent syscall                = 10;
                ProcessEvent process                = 11;
                FileEvent file                      = 12;
                KernelFunctionCallEvent kernel_call = 13;
                NetworkEvent network                = 14;

                //
                // System-level events (containers, systemd, etc)
                //

                ContainerEvent container = 20;

                //
                // Debugging events (>= 100)
                //
                ChargenEvent chargen = 100;
                TickerEvent ticker   = 101;
        }

        // Unix tid of the process thread associated with event
        int32 process_tid = 200;

        // CPU on which the event occurred
        int32 cpu = 201;
}

message ChargenEvent {
        // Index of the first character in this Event in relation to all of
        // the characters that have been generated in this stream.
        uint64 index = 1;

        // The next one or more characters in the autogenerated stream
        string characters = 2;
}

message TickerEvent {
        // The number of seconds elapsed since January 1, 1970 UTC.
        //
        // https://golang.org/pkg/time/#Time.Unix
        int64 seconds = 1;

        // The number of nanoseconds elapsed since January 1, 1970 UTC
        //
        // https://golang.org/pkg/time/#Time.UnixNano
        int64 nanoseconds = 2;
}

enum ContainerEventType {
        CONTAINER_EVENT_TYPE_UNKNOWN   = 0;
        CONTAINER_EVENT_TYPE_CREATED   = 1;
        CONTAINER_EVENT_TYPE_RUNNING   = 2;
        CONTAINER_EVENT_TYPE_EXITED    = 3;
        CONTAINER_EVENT_TYPE_DESTROYED = 4;
}

// ContainerEvent describes a Docker container or Rkt App lifecycle event
message ContainerEvent {
        ContainerEventType type = 1;
        string name             = 2;

        //
        // The fields below are state-dependent and may not always be present
        //

        // Unique identifier of the container image
        string image_id = 10;

        //
        // Name of the container image (i.e. "busybox" or
        // "gcr.io/google_containers/nginx-ingress-controller")
        //
        string image_name = 11;

        // Host process identifier of the container's init process.
        sint32 host_pid = 20;

        // The exit code of the container if it has exited
        sint32 exit_code = 30;

        // Docker container configuration file
        string docker_config_json = 100;

        // OCI container configuration file
        string oci_config_json = 101;
}

enum ProcessEventType {
        PROCESS_EVENT_TYPE_UNKNOWN = 0;
        PROCESS_EVENT_TYPE_FORK    = 1;
        PROCESS_EVENT_TYPE_EXEC    = 2;
        PROCESS_EVENT_TYPE_EXIT    = 3;
}

message ProcessEvent {
        ProcessEventType type = 1;

        // Optional
        sint32 fork_child_pid = 10;

        // Optional
        string fork_child_id = 11;

        // Optional
        string exec_filename              = 20;
        repeated string exec_command_line = 21;

        // Optional
        sint32 exit_code = 30;
}

enum SyscallEventType {
        SYSCALL_EVENT_TYPE_UNKNOWN = 0;
        SYSCALL_EVENT_TYPE_ENTER   = 1;
        SYSCALL_EVENT_TYPE_EXIT    = 2;
}

message SyscallEvent {
        SyscallEventType type = 1;

        int64 id = 2;

        uint64 arg0 = 10;
        uint64 arg1 = 11;
        uint64 arg2 = 12;
        uint64 arg3 = 13;
        uint64 arg4 = 14;
        uint64 arg5 = 15;

        int64 ret = 20;
}

enum FileEventType {
        FILE_EVENT_TYPE_UNKNOWN = 0;
        FILE_EVENT_TYPE_OPEN    = 1;
}

message FileEvent {
        FileEventType type = 1;

        string filename   = 10;
        sint32 open_flags = 11;
        sint32 open_mode  = 12;
}

message Process {
        sint32 pid = 1;
        string command = 2;
}

enum KernelFunctionCallEventType {
        KERNEL_FUNCTION_CALL_EVENT_TYPE_UNKNOWN = 0;
        KERNEL_FUNCTION_CALL_EVENT_TYPE_ENTER = 1;
        KERNEL_FUNCTION_CALL_EVENT_TYPE_EXIT = 2;
}

message KernelFunctionCallEvent {
        enum FieldType {
                UNKNOWN = 0;
                BYTES = 1;
                STRING = 2;
                SINT8 = 3;
                SINT16 = 4;
                SINT32 = 5;
                SINT64 = 6;
                UINT8 = 7;
                UINT16 = 8;
                UINT32 = 9;
                UINT64 = 10;
        }

        message FieldValue {
                FieldType field_type = 1;

                oneof value {
                        bytes  bytes_value = 2;
                        string string_value = 3;
                        sint64 signed_value = 4;
                        uint64 unsigned_value = 5;
                };
        };

        map<string, FieldValue> arguments = 1;
}

enum NetworkEventType {
        NETWORK_EVENT_TYPE_UNKNOWN = 0;
        NETWORK_EVENT_TYPE_CONNECT_ATTEMPT = 1;
        NETWORK_EVENT_TYPE_CONNECT_RESULT = 2;
        NETWORK_EVENT_TYPE_BIND_ATTEMPT = 3;
        NETWORK_EVENT_TYPE_BIND_RESULT = 4;
        NETWORK_EVENT_TYPE_LISTEN_ATTEMPT = 5;
        NETWORK_EVENT_TYPE_LISTEN_RESULT = 6;
        NETWORK_EVENT_TYPE_ACCEPT_ATTEMPT = 7;
        NETWORK_EVENT_TYPE_ACCEPT_RESULT = 8;
        NETWORK_EVENT_TYPE_SENDTO_ATTEMPT = 9;
        NETWORK_EVENT_TYPE_SENDTO_RESULT = 10;
        NETWORK_EVENT_TYPE_RECVFROM_ATTEMPT = 11;
        NETWORK_EVENT_TYPE_RECVFROM_RESULT = 12;
}

message NetworkEvent {
        NetworkEventType type = 1;

        uint64         sockfd = 10;  // only set for *_ATTEMPT types
        NetworkAddress address = 11; // set for *_ATTEMPT types
        sint64         result = 12;  // only set for *_RESULT types
        uint64         backlog = 13; // only set for NETWORK_EVENT_TYPE_LISTEN_ATTEMPT
}
